--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1000.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ferfid</title>
-<link rel="icon" type="image/png" href="https://i.ibb.co.com/tTSdDsbs/f-2.png">
 <style>
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
