--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Cube file -->
     <div class="cube" data-name="patreon bypasser" id="patreonCube" onclick="openDownload()">
-        <img src="https://select-maroon-uxuxd30rsl.edgeone.app/Robux_2019_Logo_gold.svg.png" alt="Patreon Bypasser">
+        <img src="https://i.ibb.co.com/Wp6hXr9L/Robux-2019-Logo-gold-svg.png">
         Patreon Bypasser
     </div>
 
@@ -121,3 +121,4 @@
 </script>
 </body>
 </html>
+
